# turkuaz_payment_gateway

./: .env.example  .gitignore  Dockerfile  README.md  Turkuaz_MKassa_Integration_Brief.docx  Turkuaz_MKassa_Presentation_Brief.docx  docker-compose.yml  main.py  pyproject.toml
TigerIntegrationWorker/: Contracts.cs  Inspect-LObjectsDataObjectType.ps1  LogoObjectsClient.cs  Options.cs  PaymentGatewayPoller.cs  Program.cs  README.md  Start-TigerWorker.cmd  Start-TigerWorker.ps1  TigerWorker.csproj  appsettings.example.json
docs/: 1C_PAYMENT_SYNC.md  ARCHITECTURE.md  MKASSA_API_NOTES.md  ODENGI_API_NOTES.md  TIGER_DOTNET_BEGINNER_STEPS.md  TIGER_INTEGRATION_PLAN.md  TIGER_POLARIS_INTEGRATION_NOTES_RU.md  TIGER_POLARIS_RU_MEMO.md  TIGER_PROGRESS_LOG.md  TIGER_READONLY_DISCOVERY.md
docs/samples/: TIGER_BANK_VOUCHER_923_1_REF_2.xml
frontend/: Dockerfile  Dockerfile.dockerignore  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: web.config
frontend/src/: App.tsx  api.ts  styles.css  types.ts
integrations/1c/: PayQR_1C_Diagnostics.bsl  PayQR_1C_ExportTigerClientCodes_CommandModule.bsl  PayQR_1C_ExportTigerClientCodes_CommonModule_Additions.bsl  PayQR_1C_InvoiceQRCode_Module.bsl  PayQR_1C_LoadPayments_CommandModule.bsl  PayQR_1C_PaymentSync_Module.bsl  README.md
migrations/versions/: 20260614_0002_add_external_invoice_id.py  20260622_0003_add_print_qr_codes.py  20260626_0004_add_tiger_invoice_exports.py  (+4 more)
tests/: test_api.py  test_client.py  test_models.py  test_odengi_client.py  test_service.py
(+22 files in other folders)
