[project]
name = "mbank-mkassa-integration"
version = "0.1.0"
description = "Standalone microservice for MBank MKassa QR API integration"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
mbank-integration = "mbank_integration.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbank_integration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
